<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@drawable/custom_bottom_sheet_background"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:src="@drawable/img_bottom_sheet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mulish_semi_bold"
            android:text="@string/grant_access"
            android:textColor="#227DF2"
            android:textFontWeight="600"
            android:textSize="@dimen/text28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center_horizontal"
            android:text="@string/permission_remind"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="@dimen/text20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_allow"
            android:layout_width="251dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="51dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/custom_background_blue"
            android:fontFamily="@font/mulish_semi_bold"
            android:text="@string/allow"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textFontWeight="600"
            android:textSize="@dimen/text20sp" />

    </LinearLayout>

</layout>
