<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        tools:context=".ui.main.text.TextFragment">

        <RelativeLayout
            android:id="@+id/text_bottom_controls"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_alignParentBottom="true"
            android:background="#1C1C1C"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_choose_color"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/ic_all_color"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_item"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_above="@id/tools"
                android:layout_toEndOf="@id/ic_choose_color"
                android:background="#1C1C1C"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:listitem="@layout/item_sticker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_above="@id/tools"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/btn_text_add"
                    style="@style/TextViewChooseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textFontWeight="400"
                    app:drawableTopCompat="@drawable/icon_add_text" />

                <TextView
                    android:id="@+id/btn_text_font"
                    style="@style/TextViewChooseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/font"
                    android:textFontWeight="400"
                    app:drawableTopCompat="@drawable/icon_font" />

                <TextView
                    android:id="@+id/btn_text_color"
                    style="@style/TextViewChooseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color"
                    android:textFontWeight="400"
                    app:drawableTopCompat="@drawable/icon_color" />

                <TextView
                    android:id="@+id/btn_text_bg_color"
                    style="@style/TextViewChooseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bg_color"
                    android:textFontWeight="400"
                    app:drawableTopCompat="@drawable/icon_bg_color" />

            </LinearLayout>

            <include
                android:id="@+id/tools"
                layout="@layout/bottom_tools" />

        </RelativeLayout>

    </RelativeLayout>

</layout>